# dw-workshop

./: .env  README.md  pyproject.toml
src/: extract_load.py
